--- a/src/page-template.html
+++ b/src/page-template.html
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Team Memeber Page</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./src/style.css" />
+    <title>Team Member Page</title>
+  </head>
+
+  <body>
+    <header class="jumbotron">
+      <h1 class="">Team Member Contacts</h1>
+    </header>
+    <div class="row">
 
 
-    
-    
-</body>
-</html>
+      <!-- manager card -->
+      <div class="col-3">
+          <div class="">manager</div>
+          <div>name</div>
+          <ul>
+              <li>email</li>
+              <li>id number</li>
+              <li>phone number</li>
+          </ul>
+      </div> 
+
+        <!-- engineer card -->
+        <div class="col-3">
+            <div class="">engineer</div>
+            <div>name</div>
+            <ul>
+                <li>email</li>
+                <li>id number</li>
+                <li>github</li>
+            </ul>
+        </div>
+
+        <!-- intern card -->
+        <div class="col-3">
+            <div class="">intern</div>
+            <div>name</div>
+            <ul>
+                <li>email</li>
+                <li>id number</li>
+                <li>school</li>
+            </ul>  
+        </div>
+
+
+      </div>
