added styling and fixed some typos in the prompt

--- a/src/page-template.html
+++ b/src/page-template.html
@@ -14,22 +14,22 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" href="./style.css">
     <title>Team Member Page</title>
   </head>
 
   <body>
-    <header class="jumbotron">
-      <h1 class="">Team Member Contacts</h1>
+    <header class="jumbotron bg-primary">
+      <h1 class="text-center">Team Member Contacts</h1>
     </header>
     <div class="row">
 
 
       <!-- manager card -->
       <div class="col-3">
-          <div class="">manager</div>
-          <div>name</div>
-          <ul>
+          <div class="text-center bg-danger role">manager</div>
+          <div class="text-center name">name</div>
+          <ul class="list-unstyled info">
               <li>email</li>
               <li>id number</li>
               <li>phone number</li>
@@ -38,9 +38,9 @@
 
         <!-- engineer card -->
         <div class="col-3">
-            <div class="">engineer</div>
-            <div>name</div>
-            <ul>
+            <div class="text-center bg-success role">engineer</div>
+            <div class="text-center name">name</div>
+            <ul class="list-unstyled info">
                 <li>email</li>
                 <li>id number</li>
                 <li>github</li>
@@ -49,9 +49,9 @@
 
         <!-- intern card -->
         <div class="col-3">
-            <div class="">intern</div>
-            <div>name</div>
-            <ul>
+            <div class="text-center bg-info role">intern</div>
+            <div class="text-center name">name</div>
+            <ul class="list-unstyled info">
                 <li>email</li>
                 <li>id number</li>
                 <li>school</li>
