added validation to prompt questions and fixed typos

--- a/src/page-template.html
+++ b/src/page-template.html
@@ -41,7 +41,7 @@
             <div class="text-center bg-success role">engineer</div>
             <div class="text-center name">name</div>
             <ul class="list-unstyled info">
-                <li>email</li>
+                <li><input type="email"/>Email: ${engineer.email}</li>
                 <li>id number</li>
                 <li>github</li>
             </ul>
